# backend/docs/swagger.yml
@@ -119,6 +119,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/Product"
 
+  /product:
+    post:
+      operationId: products.getList
+      tags:
+        - products
+      summary: Returns list of available products.
+      description: Return description, stock and status of available products.
+      parameters:
+        - in: header
+          name: userToken
+          description: User token.
+          schema:
+            type: string
+            example: token
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+
   /order:
     get:
       operationId: user.getOrders
